# github-actions-practice

./: .gitignore  Pipfile  README.md  docker-compose.yml  mypy.ini  requirements.txt  setup.cfg
.github/actions/lint/: Dockerfile  entrypoint.sh
.github/actions/test/: Dockerfile  entrypoint.sh
.github/workflows/: workflow.yml
Docker/python/: Dockerfile
python/hello_world/: __init__.py  hello_world.py
tests/hello_world/: test_hello_world.py
