[metadata]
name = hello_world
version = attr: hello_world.__version__.__version__
author = Kanchi Shimono
author_email = shimono-kanchi-yc@ynu.jp
description = test library
long_description = test library
url = https://github.com/KanchiShimono/github-actions-practice
license = MIT

[options]
python_requires = >=3.6
package_dir =
  = python
packages = find:
install_requires =
  emoji >= 0.5.0

[options.packages.find]
where = python
