[metadata]
name = hello_world
version = attr: hello_world.__version__.__version__
author = Kanchi Shimono
author_email = dev.kanchi.shimono@gmail.com
description = test library
long_description = test library
url = https://github.com/KanchiShimono/github-actions-practice
license = MIT

[options]
python_requires = >=3.6
package_dir =
  = python
packages = find:
install_requires =
  emoji >= 0.5.0

[options.extras_require]
dev =
  mypy
  flake8
  isort
  black

test =
  mypy
  flake8
  pytest

[options.packages.find]
where = python

[flake8]
extend-ignore = E203
max-complexity = 10

[isort]
force_grid_wrap = 0
include_trailing_comma = True
multi_line_output = 3
use_parentheses = True
known_first_party = hello_world
default_section = THIRDPARTY
